fix for invalid input width on mobile

--- a/src/components/theme/Input/input.module.css
+++ b/src/components/theme/Input/input.module.css
@@ -1,4 +1,3 @@
-
 .input {
 	position: relative;
 	display: flex;
@@ -21,12 +20,13 @@
 	}
 
 	input {
-		font-family: Heebo;
+		width: 100%;
 		border: 0;
 		border-bottom: 1px solid;
 		padding-block: 0.15rem;
 		margin-bottom: 1rem;
 		outline: 1px solid transparent;
+		font-family: Heebo;
 
 		&:focus {
 			border-bottom-width: 2px;
